fix scrollbar bug

--- a/src/scss/components/_timeline.scss
+++ b/src/scss/components/_timeline.scss
@@ -18,6 +18,7 @@
   position: fixed;
   top: 0;
   z-index: 1;
+  overflow: hidden;
 }
 
 .rt-timeline__body {
